[gd_scene load_steps=4 format=3 uid="uid://q76geh8jqrei"]

[ext_resource type="Script" path="res://main.gd" id="1_on8gp"]
[ext_resource type="PackedScene" uid="uid://cpghq3ve70sg0" path="res://gui/main_menu/main_menu.tscn" id="1_rauo3"]
[ext_resource type="PackedScene" uid="uid://2n0u3k5i6lwq" path="res://gui/settings/settings_ui.tscn" id="2_6wrng"]

[node name="Main" type="Node"]
script = ExtResource("1_on8gp")

[node name="MainMenu" parent="." instance=ExtResource("1_rauo3")]

[node name="SettingsUI" parent="." instance=ExtResource("2_6wrng")]
visible = false

[connection signal="exit_requested" from="MainMenu" to="." method="_on_MainMenu_exit_requested"]
[connection signal="settings_requested" from="MainMenu" to="." method="_on_MainMenu_settings_requested"]
[connection signal="start_requested" from="MainMenu" to="." method="_on_MainMenu_start_requested"]
